# detective

./: .gitignore  README.md  io.github.leolost2605.detective.yml  meson.build  meson_options.txt
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/io.github.leolost2605.detective/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/io.github.leolost2605.detective.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-io.github.leolost2605.detective.yml/: build-Detective  cleanup  finish  init
.flatpak-builder/cache/summaries/: 8e5cec30b3d8955222c50bb6ebab9f065c948d45906b56bb39d4a09ad4076aab-77cb0ccc021555c975c1d7ef887195a54ce22a575f14b0e33f949d4ab77b68e4.delta
.flatpak-builder/checksums/: x86_64-io.github.leolost2605.detective.yml
data/: io.github.leolost2605.detective.appdata.xml.in  io.github.leolost2605.detective.desktop.in  meson.build
flatpak-build/: metadata
flatpak-build/files/lib/debug/source/Detective/_flatpak_build/io.github.leolost2605.detective.p/src/: Application.c
lib/: Engine.vala  InternalProvider.vala  Match.vala  MatchType.vala  PluginLoader.vala  Query.vala  SearchProvider.vala  config.vapi  meson.build
lib/Match/: Match.vala  MatchType.vala  Query.vala  SearchProvider.vala
lib/Plugins/: FilePlugin.vala  TrackerPlugin.vala
lib/Utils/: Algorithms.vala  SignalMatch.vala  TrackerProvider.vala
plugins/: meson.build
plugins/AppsPlugin/: DesktopIntegration.vala  Plugin.vala  RelevancyService.vala  meson.build
plugins/CalculatorPlugin/: Backend.vala  Plugin.vala  meson.build
plugins/FilePlugin/: Plugin.vala  meson.build
plugins/LocationPlugin/: LocationPreview.vala  Plugin.vala  meson.build
plugins/LocationPlugin/data/: io.github.leolost2605.detective.location-plugin.gresource.xml
plugins/WebSearchPlugin/: Plugin.vala  meson.build
po/: POTFILES  de.po  fr.po  io.github.leolost2605.detective.pot  pt_BR.po
src/: Application.vala  GenericPreview.vala  MatchRow.vala  Preview.vala  SearchWindow.vala  ShellKeyGrabber.vala
src/Core/: Engine.vala  Match.vala  SearchProvider.vala
src/Core/Utils/: README.md  TrackerProvider.vala
src/Plugins/: ActionsPlugin.vala  TrackerPlugin.vala
